// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders large checkbox 1`] = `
.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 0.25rem;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c5::after {
  content: ' ';
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath d='M3.711 8.037a1.051 1.051 0 0 1 1.485-.063l1.411 1.297 4.113-4.806a1.051 1.051 0 1 1 1.597 1.367l-4.63 5.41a1.333 1.333 0 0 1-1.916.116L3.774 9.522a1.051 1.051 0 0 1-.063-1.485z' id='a'/%3E%3C/defs%3E%3Cuse fill='%23FFF' fill-rule='nonzero' xlink:href='%23a'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1rem;
  height: 1rem;
  position: absolute;
  top: 50%;
  left: 45%;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate(-45%,-40%) scale(0.2);
  -ms-transform: translate(-45%,-40%) scale(0.2);
  transform: translate(-45%,-40%) scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,-webkit-transform 175ms;
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
}

.c5:checked {
  background-color: #096BDB;
  box-shadow: inset 0 0 0 0.125rem #096BDB;
}

.c5:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate(-45%,-50%) scale(1);
  -ms-transform: translate(-45%,-50%) scale(1);
  transform: translate(-45%,-50%) scale(1);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:active {
  background-color: #F1F2F4;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 0.5rem;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #001E3E;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c2:not(:active) {
  background-color: #F1F7FD;
}

.c0:hover .c4:not(:checked) {
  box-shadow: inset 0 0 0 0.125rem #096BDB;
  background-color: #FFFFFF;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1rem;
  margin: 0 0.5rem 0 0;
}

<div>
  <label
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      />
      <input
        class="c4 c5"
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`Checkbox renders medium checkbox 1`] = `
.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 0.25rem;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c5::after {
  content: ' ';
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath d='M3.711 8.037a1.051 1.051 0 0 1 1.485-.063l1.411 1.297 4.113-4.806a1.051 1.051 0 1 1 1.597 1.367l-4.63 5.41a1.333 1.333 0 0 1-1.916.116L3.774 9.522a1.051 1.051 0 0 1-.063-1.485z' id='a'/%3E%3C/defs%3E%3Cuse fill='%23FFF' fill-rule='nonzero' xlink:href='%23a'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1rem;
  height: 1rem;
  position: absolute;
  top: 50%;
  left: 45%;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate(-45%,-40%) scale(0.2);
  -ms-transform: translate(-45%,-40%) scale(0.2);
  transform: translate(-45%,-40%) scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,-webkit-transform 175ms;
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
}

.c5:checked {
  background-color: #096BDB;
  box-shadow: inset 0 0 0 0.125rem #096BDB;
}

.c5:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate(-45%,-50%) scale(1);
  -ms-transform: translate(-45%,-50%) scale(1);
  transform: translate(-45%,-50%) scale(1);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:active {
  background-color: #F1F2F4;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 0.5rem;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #001E3E;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c2:not(:active) {
  background-color: #F1F7FD;
}

.c0:hover .c4:not(:checked) {
  box-shadow: inset 0 0 0 0.125rem #096BDB;
  background-color: #FFFFFF;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1rem;
  margin: 0 0.5rem 0 0;
}

<div>
  <label
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      />
      <input
        class="c4 c5"
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`Checkbox renders small checkbox 1`] = `
.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 0.25rem;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c5::after {
  content: ' ';
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath d='M3.711 8.037a1.051 1.051 0 0 1 1.485-.063l1.411 1.297 4.113-4.806a1.051 1.051 0 1 1 1.597 1.367l-4.63 5.41a1.333 1.333 0 0 1-1.916.116L3.774 9.522a1.051 1.051 0 0 1-.063-1.485z' id='a'/%3E%3C/defs%3E%3Cuse fill='%23FFF' fill-rule='nonzero' xlink:href='%23a'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1rem;
  height: 1rem;
  position: absolute;
  top: 50%;
  left: 45%;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate(-45%,-40%) scale(0.2);
  -ms-transform: translate(-45%,-40%) scale(0.2);
  transform: translate(-45%,-40%) scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,-webkit-transform 175ms;
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
}

.c5:checked {
  background-color: #096BDB;
  box-shadow: inset 0 0 0 0.125rem #096BDB;
}

.c5:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate(-45%,-50%) scale(1);
  -ms-transform: translate(-45%,-50%) scale(1);
  transform: translate(-45%,-50%) scale(1);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:active {
  background-color: #F1F2F4;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 0.5rem;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #001E3E;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c2:not(:active) {
  background-color: #F1F7FD;
}

.c0:hover .c4:not(:checked) {
  box-shadow: inset 0 0 0 0.125rem #096BDB;
  background-color: #FFFFFF;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1rem;
  margin: 0 0.5rem 0 0;
}

<div>
  <label
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      />
      <input
        class="c4 c5"
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`Checkbox renders the checked style 1`] = `
.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 0.25rem;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c5::after {
  content: ' ';
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath d='M3.711 8.037a1.051 1.051 0 0 1 1.485-.063l1.411 1.297 4.113-4.806a1.051 1.051 0 1 1 1.597 1.367l-4.63 5.41a1.333 1.333 0 0 1-1.916.116L3.774 9.522a1.051 1.051 0 0 1-.063-1.485z' id='a'/%3E%3C/defs%3E%3Cuse fill='%23FFF' fill-rule='nonzero' xlink:href='%23a'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1rem;
  height: 1rem;
  position: absolute;
  top: 50%;
  left: 45%;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate(-45%,-40%) scale(0.2);
  -ms-transform: translate(-45%,-40%) scale(0.2);
  transform: translate(-45%,-40%) scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,-webkit-transform 175ms;
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
}

.c5:checked {
  background-color: #096BDB;
  box-shadow: inset 0 0 0 0.125rem #096BDB;
}

.c5:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate(-45%,-50%) scale(1);
  -ms-transform: translate(-45%,-50%) scale(1);
  transform: translate(-45%,-50%) scale(1);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:active {
  background-color: #F1F2F4;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 0.5rem;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #001E3E;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c2:not(:active) {
  background-color: #F1F7FD;
}

.c0:hover .c4:not(:checked) {
  box-shadow: inset 0 0 0 0.125rem #096BDB;
  background-color: #FFFFFF;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1rem;
  margin: 0 0.5rem 0 0;
}

<label
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      checked=""
      class="c4 c5"
      type="checkbox"
    />
  </div>
</label>
`;

exports[`Checkbox renders the disabled checked style 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 0.25rem;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c4::after {
  content: ' ';
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath d='M3.711 8.037a1.051 1.051 0 0 1 1.485-.063l1.411 1.297 4.113-4.806a1.051 1.051 0 1 1 1.597 1.367l-4.63 5.41a1.333 1.333 0 0 1-1.916.116L3.774 9.522a1.051 1.051 0 0 1-.063-1.485z' id='a'/%3E%3C/defs%3E%3Cuse fill='%23FFF' fill-rule='nonzero' xlink:href='%23a'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1rem;
  height: 1rem;
  position: absolute;
  top: 50%;
  left: 45%;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate(-45%,-40%) scale(0.2);
  -ms-transform: translate(-45%,-40%) scale(0.2);
  transform: translate(-45%,-40%) scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,-webkit-transform 175ms;
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
}

.c4:checked {
  background-color: #096BDB;
  box-shadow: inset 0 0 0 0.125rem #096BDB;
}

.c4:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate(-45%,-50%) scale(1);
  -ms-transform: translate(-45%,-50%) scale(1);
  transform: translate(-45%,-50%) scale(1);
}

.c4:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:active {
  background-color: #F1F2F4;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 0.5rem;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #9CA7B4;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: not-allowed;
}

.c0:hover > .c2:active {
  background-color: transparent;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1rem;
  margin: 0 0.5rem 0 0;
}

<label
  class="c0"
  disabled=""
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      checked=""
      class="c4"
      disabled=""
      type="checkbox"
    />
  </div>
</label>
`;

exports[`Checkbox renders the disabled style 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 0.25rem;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c4::after {
  content: ' ';
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath d='M3.711 8.037a1.051 1.051 0 0 1 1.485-.063l1.411 1.297 4.113-4.806a1.051 1.051 0 1 1 1.597 1.367l-4.63 5.41a1.333 1.333 0 0 1-1.916.116L3.774 9.522a1.051 1.051 0 0 1-.063-1.485z' id='a'/%3E%3C/defs%3E%3Cuse fill='%23FFF' fill-rule='nonzero' xlink:href='%23a'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1rem;
  height: 1rem;
  position: absolute;
  top: 50%;
  left: 45%;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate(-45%,-40%) scale(0.2);
  -ms-transform: translate(-45%,-40%) scale(0.2);
  transform: translate(-45%,-40%) scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,-webkit-transform 175ms;
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
}

.c4:checked {
  background-color: #096BDB;
  box-shadow: inset 0 0 0 0.125rem #096BDB;
}

.c4:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate(-45%,-50%) scale(1);
  -ms-transform: translate(-45%,-50%) scale(1);
  transform: translate(-45%,-50%) scale(1);
}

.c4:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:active {
  background-color: #F1F2F4;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 0.5rem;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #9CA7B4;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: not-allowed;
}

.c0:hover > .c2:active {
  background-color: transparent;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1rem;
  margin: 0 0.5rem 0 0;
}

<label
  class="c0"
  disabled=""
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      class="c4"
      disabled=""
      type="checkbox"
    />
  </div>
</label>
`;

exports[`Checkbox renders the error checked style 1`] = `
.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #FF5E05;
  border-radius: 0.25rem;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c4::after {
  content: ' ';
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath d='M3.711 8.037a1.051 1.051 0 0 1 1.485-.063l1.411 1.297 4.113-4.806a1.051 1.051 0 1 1 1.597 1.367l-4.63 5.41a1.333 1.333 0 0 1-1.916.116L3.774 9.522a1.051 1.051 0 0 1-.063-1.485z' id='a'/%3E%3C/defs%3E%3Cuse fill='%23FFF' fill-rule='nonzero' xlink:href='%23a'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1rem;
  height: 1rem;
  position: absolute;
  top: 50%;
  left: 45%;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate(-45%,-40%) scale(0.2);
  -ms-transform: translate(-45%,-40%) scale(0.2);
  transform: translate(-45%,-40%) scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,-webkit-transform 175ms;
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
}

.c4:checked {
  background-color: #FF5E05;
  box-shadow: inset 0 0 0 0.125rem #FF5E05;
}

.c4:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate(-45%,-50%) scale(1);
  -ms-transform: translate(-45%,-50%) scale(1);
  transform: translate(-45%,-50%) scale(1);
}

.c4:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c4:disabled:active {
  background-color: #F1F2F4;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 0.5rem;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #9CA7B4;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: not-allowed;
}

.c0:hover > .c2:active {
  background-color: transparent;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1rem;
  margin: 0 0.5rem 0 0;
}

<label
  class="c0"
  disabled=""
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      class="c4"
      disabled=""
      type="checkbox"
    />
  </div>
</label>
`;

exports[`Checkbox renders the error style 1`] = `
.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #FF5E05;
  border-radius: 0.25rem;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c5::after {
  content: ' ';
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath d='M3.711 8.037a1.051 1.051 0 0 1 1.485-.063l1.411 1.297 4.113-4.806a1.051 1.051 0 1 1 1.597 1.367l-4.63 5.41a1.333 1.333 0 0 1-1.916.116L3.774 9.522a1.051 1.051 0 0 1-.063-1.485z' id='a'/%3E%3C/defs%3E%3Cuse fill='%23FFF' fill-rule='nonzero' xlink:href='%23a'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1rem;
  height: 1rem;
  position: absolute;
  top: 50%;
  left: 45%;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate(-45%,-40%) scale(0.2);
  -ms-transform: translate(-45%,-40%) scale(0.2);
  transform: translate(-45%,-40%) scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,-webkit-transform 175ms;
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
}

.c5:checked {
  background-color: #FF5E05;
  box-shadow: inset 0 0 0 0.125rem #FF5E05;
}

.c5:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate(-45%,-50%) scale(1);
  -ms-transform: translate(-45%,-50%) scale(1);
  transform: translate(-45%,-50%) scale(1);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:active {
  background-color: #F1F2F4;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 0.5rem;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #001E3E;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c2:not(:active) {
  background-color: #FFF6F1;
}

.c0:hover .c4:not(:checked) {
  box-shadow: inset 0 0 0 0.125rem #FF5E05;
  background-color: #FFFFFF;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1rem;
  margin: 0 0.5rem 0 0;
}

<label
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      class="c4 c5"
      type="checkbox"
    />
  </div>
</label>
`;

exports[`Checkbox renders with default props 1`] = `
.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  border: none;
  position: relative;
  width: 1rem;
  height: 1rem;
  padding: 0;
  margin: 0;
  background-color: #FFFFFF;
  box-shadow: inset 0 0 0 0.125rem #C6CDD4;
  border-radius: 0.25rem;
  -webkit-transition: background-color 100ms,box-shadow 100ms;
  transition: background-color 100ms,box-shadow 100ms;
  cursor: pointer;
  vertical-align: text-bottom;
}

.c5::after {
  content: ' ';
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3Cpath d='M3.711 8.037a1.051 1.051 0 0 1 1.485-.063l1.411 1.297 4.113-4.806a1.051 1.051 0 1 1 1.597 1.367l-4.63 5.41a1.333 1.333 0 0 1-1.916.116L3.774 9.522a1.051 1.051 0 0 1-.063-1.485z' id='a'/%3E%3C/defs%3E%3Cuse fill='%23FFF' fill-rule='nonzero' xlink:href='%23a'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-size: cover;
  width: 1rem;
  height: 1rem;
  position: absolute;
  top: 50%;
  left: 45%;
  opacity: 0;
  visibility: hidden;
  -webkit-transform: translate(-45%,-40%) scale(0.2);
  -ms-transform: translate(-45%,-40%) scale(0.2);
  transform: translate(-45%,-40%) scale(0.2);
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,-webkit-transform 175ms;
  -webkit-transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
  transition: visibility 175ms,opacity 150ms,scale 175ms,transform 175ms;
}

.c5:checked {
  background-color: #096BDB;
  box-shadow: inset 0 0 0 0.125rem #096BDB;
}

.c5:checked::after {
  opacity: 1;
  visibility: visible;
  -webkit-transform: translate(-45%,-50%) scale(1);
  -ms-transform: translate(-45%,-50%) scale(1);
  transform: translate(-45%,-50%) scale(1);
}

.c5:disabled {
  cursor: not-allowed;
  background-color: #F1F2F4;
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:hover {
  box-shadow: inset 0 0 0 0.125rem #F1F2F4;
}

.c5:disabled:active {
  background-color: #F1F2F4;
}

.c3 {
  position: absolute;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 0.5rem;
  background-color: transparent;
  top: -0.375rem;
  left: -0.375rem;
  -webkit-transition: background-color 125ms;
  transition: background-color 125ms;
}

.c3:active {
  background-color: #F1F2F4;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #001E3E;
  font-family: "Open Sans",sans-serif;
  line-height: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:hover {
  cursor: pointer;
}

.c0:hover .c2:not(:active) {
  background-color: #F1F7FD;
}

.c0:hover .c4:not(:checked) {
  box-shadow: inset 0 0 0 0.125rem #096BDB;
  background-color: #FFFFFF;
}

.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1rem;
  margin: 0 0.5rem 0 0;
}

<label
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    />
    <input
      class="c4 c5"
      type="checkbox"
    />
  </div>
</label>
`;
